--- a/clase-noviembre/pom.xml
+++ b/clase-noviembre/pom.xml
@@ -22,7 +22,14 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.10.1</version>
+      <version>5.10.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-suite</artifactId>
+      <version>1.10.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -42,11 +49,15 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.11.0</version>
+          <version>3.8.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+            <groups></groups>  <!-- se define los tags que se van a ejecutar --> 
+            <excludedGroups></excludedGroups> <!-- se define los tags que NO se van a ejecutar --> 
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
